Wed Apr 10 14:44:50 BST 2002  Olly Betts <olly@survex.com>

	* Removed a superfluous DEBUGLINE.

Tue Apr  9 19:02:09 BST 2002  Richard Boulton <richard@tartarus.org>

	* Fix some DEBUGLINE() macros in the matcher which had
	  the first parameter missing.

Tue Apr 09 17:50:44 BST 2002  Olly Betts <olly@survex.com>

	* Removed stray bit of debug code. 

Tue Apr 09 17:05:09 BST 2002  Olly Betts <olly@survex.com>

	* More debug tracing added.

Tue Apr 09 10:48:42 BST 2002  Olly Betts <olly@survex.com>

	* Disabled pthread support by default.

Sat Apr  6 20:45:21 2002  James Aylett  <tartarus@users.sourceforge.net>

	* Reordered some output generation in configure so it won't
	  complain about directories not existing. (I don't understand
	  what the problem is, but this does fix it.)

Sat Apr 06 20:27:57 BST 2002  Olly Betts <olly@survex.com>

	* Moved a few lingering traces of XML indexer stuff to indexer
	  subdirectory.

Sat Apr 06 17:37:02 BST 2002  Olly Betts <olly@survex.com>

	* Removed -pedantic (read the gcc docs - it's doesn't turn on
	  useful warnings) and fixed all the remaining compilation
	  warnings in a non-debug build.

Fri Apr 05 10:21:28 BST 2002  Olly Betts <olly@survex.com>

	* Removed --enable-profiling, --enable-purify, and --enable-insure.
	  They don't do anything which can't be achieved by passing
	  environment variables and switches to configure (now documented
	  in HACKING).  Adding a separate switch for every profiling and
	  code-quality tool out there isn't a sensible approach.

Thu Apr 04 20:37:12 BST 2002  Olly Betts <olly@survex.com>

	* Updated .cvsignore files.

Thu Apr 04 20:25:41 BST 2002  Olly Betts <olly@survex.com>

	* PTHREAD_CFLAGS was only being used for compiling C, not C++, which
	  was causing builds to fail unless threading was disabled.  This
	  problem has been there a long time, but until recently was hidden
	  by the check for fdatasync erroneously linking in -lrt which pulls